<resources>
    <string name="app_name">PizzaApp</string>
    <string name="pizza_picker">Pizza Picker</string>
    <string name="chicago_pizza">Chicago Pizza</string>
    <string name="new_york_main_page">New York Main Page</string>
    <string name="textview">TextView</string>
    <string name="order_main_page">Order Main Page</string>
    <string name="store_order_main_page">Store Order Main Page</string>
    <string name="new_york">New York</string>
    <string name="chicago">Chicago</string>
    <string name="order">Order</string>
    <string name="stored_order">Stored Order</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="crust">Crust</string>
    <string name="size">Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="add_to_order">Add To Order</string>
    <string name="clear_order">Clear Order</string>
    <string name="place_order">Place Order</string>
    <string name="stored_orders">Stored Orders</string>
</resources>